--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,29 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Recent Projects</h1>
+
+{{#each projects as |project|}}
+  <div class="project">
+    <div class="project-name">
+      <h2>
+        <a href="/projects/{{project.name}}">
+          {{project.name}}
+        </a>
+      </h2>
+    </div>
+
+    <div class="project-repos">
+      <div class="project-repo">
+        <h3>
+          <a href="{{project.repo}}">GitHub Repository</a>
+        </h3>
+      </div>
+    </div>
+
+    <div class="project-technologies">
+      {{#each project.technologies as |technology|}}
+        <div class="project-domain">
+          {{project.technology}}
+        </div>
+      {{/each}}
+    </div>
+  </div>
+{{/each}}
